style(layouts): fixed some styling issues on mobile, added wider side-menu

--- a/apps/client/src/app/app.component.less
+++ b/apps/client/src/app/app.component.less
@@ -156,6 +156,11 @@
   }
 
   .sider {
+    @media @mobile {
+      position: absolute;
+      z-index: 4;
+      height: 100%;
+    }
     .ant-layout-sider-children {
       overflow: hidden;
     }
